# Zaki-time-series-lib-AQC

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
experiments/esn_tuning_20260525_202715/: detailed_results.json  gsod_grid.csv  lorenz63_grid.csv  report.md  summary.csv
experiments/gsod_full_20260525_161323/: detailed_results.json  gsod_full_results.csv  gsod_full_results_comparison.md  lorenz63_detailed.json  lorenz63_results.csv
experiments/gsod_full_20260525_161323/per_model/: ARIMA_212.csv  CNN.csv  ESN1000.csv  ESN500.csv  ElasticNet_alpha=0.01.csv  ExpSmoothing.csv  GRU.csv  HoltWinters.csv  KNN.csv  LSTM.csv  Lasso_alpha=0.01.csv  LinearRegression.csv  NBeats.csv  Persistence.csv  RandomForest.csv  Ridge_alpha=1.csv  SVR.csv  SeasonalNaive.csv  Theta.csv  Transformer.csv  XGBoost.csv
zaki_time_series_lib/: GUIDE.md  __init__.py  requirements.txt
zaki_time_series_lib/benchmark/: __init__.py  cross_validation.py  metrics.py  runner.py  statistical_tests.py  verification.py
zaki_time_series_lib/config/: __init__.py  settings.py
zaki_time_series_lib/data/: __init__.py  base_loader.py  datasets.py
zaki_time_series_lib/experiments/: __init__.py  esn_enhancement_experiment.py  esn_tuning_experiment.py  full_experiment.py  gsod_direct_strategy.py  gsod_full_experiment.py
zaki_time_series_lib/models/: __init__.py  base.py
zaki_time_series_lib/pipeline/: __init__.py  pipeline.py  registry.py
zaki_time_series_lib/utils/: __init__.py  decorators.py  logger.py  results_exporter.py  visualization.py
(+19 files in other folders)
