[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zaki_time_series_lib"
version = "0.1.0"
description = "Time series forecasting library — statistical, ML, DL, and reservoir computing models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "requests>=2.26.0",
    "pyarrow>=6.0.0",
]

[project.optional-dependencies]
deep = ["torch>=1.10.0"]
stat = ["pmdarima>=2.0.0", "arch>=5.0.0"]
ml = ["xgboost>=1.5.0", "lightgbm>=3.3.0"]
all = [
    "torch>=1.10.0",
    "pmdarima>=2.0.0",
    "arch>=5.0.0",
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
]

[tool.setuptools.packages.find]
include = ["zaki_time_series_lib", "zaki_time_series_lib.*"]
